gap fix

--- a/src/scss/admin/_variables.scss
+++ b/src/scss/admin/_variables.scss
@@ -34,6 +34,9 @@ $border-radius-md: 4px;
 
 $shadow-modal: 0 2px 20px rgba(0, 0, 0, 0.3);
 
+$gap-sm: 50px;
+$gap-md: 100px;
+
 // ── Шрифты
 $font-bold: 600;
 $font-regular: 450;
